[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "env-doctor"
version = "1.0.0"
description = "Audita variáveis de ambiente: encontra faltando, não usadas e segredos commitados."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Thiago", email = "thzinxxx007@gmail.com" }]
requires-python = ">=3.9"
keywords = ["env", "dotenv", "linter", "devtool", "ci", "secrets"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
envdoctor = "envdoctor.cli:main"

[project.urls]
Homepage = "https://github.com/Th1iago3/EnvDoctor"
Issues   = "https://github.com/Th1iago3/EnvDoctor/issues"
